src/test/ui/borrowck/borrowck-while-cond.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-while-cond.rs:3:11
   |
LL |     let x: bool;
   |         - binding declared here but left uninitialized
LL |     while x { }
   |           ^ `x` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
